--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
               <h1 class="projects-inner-head">Line Follower Robot</h1>
             </div>
             <div class="card-body">
+              <img src="images/line-follower.jpg" alt="line Follower" >
+            </div>
+            <div class="card-footer">
               <p>A Robo that follows a black line automatically using Arduino only</p>
             </div>
           </div>
@@ -169,6 +172,9 @@
               <h1 class="projects-inner-head">Bluetooth Controlled Robot</h1>
             </div>
             <div class="card-body">
+              <img src="images/bluetooth-rc.jpg" alt="Bluettoth RC">
+            </div>
+            <div class="card-footer">
               <p>A Robo that is controlled remotely through an android app</p>
             </div>
           </div>
@@ -179,6 +185,9 @@
               <h1 class="projects-inner-head">DTMF Controlled Robot</h1>
             </div>
             <div class="card-body">
+              <img src="images/dtmf-robot.jpg" alt="DTMF Robot">
+            </div>
+            <div class="card-footer">
               <p>We send commands to the DTMF decoder through the phone</p>
             </div>
           </div>
@@ -191,6 +200,9 @@
               <h1 class="projects-inner-head">Autonomous RC</h1>
             </div>
             <div class="card-body">
+              <img src="images/autonomous-rc.jpg" alt="Autonomous RC">
+            </div>
+            <div class="card-footer">
               <p>An RC Car that moves by itself. Ultrasonic Sensors detect the obstacles</p>
             </div>
           </div>
@@ -201,6 +213,9 @@
               <h1 class="projects-inner-head">Design and Analysis Of JCB Bucket</h1>
             </div>
             <div class="card-body">
+              <img src="images/jcb-bucket.jpg" alt="JCB Bucked Design">
+            </div>
+            <div class="card-footer">
               <p>Designed a JCB bucket</p>
             </div>
           </div>
@@ -211,6 +226,9 @@
               <h1 class="projects-inner-head">Fire Fighting Robot</h1>
             </div>
             <div class="card-body">
+              <img src="images/fire-fighiting.png" alt="Fire Fighiting RObot">
+            </div>
+            <div class="card-footer">
               <p>The fire fighting robot that simulates the real-world operation of a robot to extinguish</p>
             </div>
           </div>
