--- a/index.html
+++ b/index.html
@@ -314,6 +314,20 @@
     </div>
   </section>
 
+  <!-- Gallery -->
+  <section id="gallery">
+    <h1 class="gallery-head">Gallery</h1>
+    <div class="row gallery-row">
+      <div class="col">
+        <img src="images/1.JPG" alt="As General Secretary of Technical Club">
+        <h1 class="gallery-dis">As General Secretary of Technical Club KITSW</h1>
+      </div>
+      <div class="col">
+        <img src="images/3.JPG" alt="Sumshodhini 20">
+        <h1 class="gallery-dis">Report of Sumshodini A Natational Level Technical Fest at KITSW</h1>
+      </div>
+    </div>
+  </section>
   
 
   <!-- Footer -->
@@ -339,30 +353,6 @@
       </div>
     </div>
   </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
