--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="I am a Btech gradutating Student from kakatiya institute of technology and Science, Warangal. I am from Mechanical Engineering">
+    <meta name="keywords" content="Sriram,gunda,gundasriram,sriramgunda">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
