Update May 18 9.34 PM

--- a/index.html
+++ b/index.html
@@ -320,11 +320,11 @@
   <section id="gallery">
     <h1 class="gallery-head">Gallery</h1>
     <div class="row gallery-row">
-      <div class="col">
+      <div class="col col-lg-6 col-md-12">
         <img src="images/1.JPG" alt="As General Secretary of Technical Club">
         <h1 class="gallery-dis">As General Secretary of Technical Club KITSW</h1>
       </div>
-      <div class="col">
+      <div class="col col-lg-6 col-md-12">
         <img src="images/3.JPG" alt="Sumshodhini 20">
         <h1 class="gallery-dis">Report of Sumshodini A Natational Level Technical Fest at KITSW</h1>
       </div>
