--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a class="nav-link " aria-current="page" style="color: white;" href="#gallery">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" style="color: white;" href="#footer">Contact</a>
+              <a class="nav-link " aria-current="page" style="color: white;" href="#contact">Contact</a>
             </li>
           </ul>
           
@@ -336,6 +336,14 @@
         <h1 class="gallery-dis">Report of Sumshodini A Natational Level Technical Fest at KITSW</h1>
       </div>
     </div>
+  </section>
+
+
+  <!-- Contact -->
+  <section id="contact">
+    <h1 class="contact-head">Contact</h1>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3794.688396818835!2d79.55060011445856!3d17.993228587718214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a334f844c6121e7%3A0x8739e028f7c2e476!2sManjeera%20Narayana%20Nilayam!5e0!3m2!1sen!2sin!4v1621481594930!5m2!1sen!2sin" width="950" height="450" style="border: 1cm;" allowfullscreen="" loading="lazy"></iframe>
+    
   </section>
   
 
