--- a/index.html
+++ b/index.html
@@ -165,9 +165,11 @@
               <img src="images/line-follower.jpg" alt="line Follower" >
             </div>
             <div class="card-footer">
-              <p>A Robo that follows a black line automatically using Arduino only</p>
+              <p>A Robo that follows a black line automatically using Arduino only </p>
+              
             </div>
           </div>
+          
         </div>
         <div class="col col-lg-4 col-sm-6 col-12">
           <div class="card">
@@ -191,7 +193,7 @@
               <img src="images/dtmf-robot.jpg" alt="DTMF Robot">
             </div>
             <div class="card-footer">
-              <p>We send commands to the DTMF decoder through the phone</p>
+              <p>We send commands to the DTMF decoder through the phone<a tabindex="0" class="btn btn-link" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Over view" data-bs-content="Arduino reads the commands sent by the Decoder and compares them with define code. If the commands match sends respective commands to the drives section."><u>read more</u></a></p>
             </div>
           </div>
         </div>
@@ -206,7 +208,7 @@
               <img src="images/autonomous-rc.jpg" alt="Autonomous RC">
             </div>
             <div class="card-footer">
-              <p>An RC Car that moves by itself. Ultrasonic Sensors detect the obstacles</p>
+              <p>An RC Car that moves by itself. Ultrasonic Sensors detect the obstacles<a tabindex="0" class="btn btn-link" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Over view" data-bs-content="and send them to the Arduino and then it sends respective commands to the drive section."><u>read more</u></a></p>
             </div>
           </div>
         </div>
@@ -232,7 +234,7 @@
               <img src="images/fire-fighiting.png" alt="Fire Fighiting RObot">
             </div>
             <div class="card-footer">
-              <p>The fire fighting robot that simulates the real-world operation of a robot to extinguish</p>
+              <p>The fire fighting robot that simulates the real-world operation of a robot to extinguish<a tabindex="0" class="btn btn-link" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Over view" data-bs-content="extinguish and rescue during a fire accident."><u>read more</u></a></p>
             </div>
           </div>
         </div>
@@ -377,7 +379,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
+    <script src="index.js" charset="utf-8"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
